--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,9 +1,9 @@
-schemaVersion: 2.1.0
-metadata:
-    name: mydevfile
-components:
-  - name: go
-    container:
-      image: golang
-      memoryLimit: 512Mi
-      command: ['sleep', 'infinity']
+schemaVersion: 2.1.0  
+metadata:  
+  name: my-example  
+components:  
+  - name: tools  
+ container:  
+   image: registry.access.redhat.com/ubi8/openjdk-11  
+   command: ['tail']  
+   args: ['-f', '/dev/null']
