--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,57 +1,26 @@
-schemaVersion: 2.1.0
-metadata:
-  name: java-maven
-  version: 1.1.0
-  displayName: Maven Java
-  description: Upstream Maven and OpenJDK 11
-  tags: ['Java', 'Maven']
-  projectType: 'maven'
-  language: 'java'
-  icon: https://raw.githubusercontent.com/devfile-samples/devfile-stack-icons/main/java-maven.jpg
-starterProjects:
-  - name: springbootproject
+schemaVersion: 2.1.0  
+metadata:  
+  name: my-example  
+attributes:  
+  .che/che-editor.yaml: |  
+     id: che-incubator/che-code/insiders
+projects:
+  - name: petclinic
     git:
       remotes:
-        origin: 'https://github.com/odo-devfiles/springboot-ex.git'
+        origin: "https://github.com/spring-projects/spring-petclinic.git"
 components:
-  - name: tools
+  - name: dev
     container:
-      image: quay.io/eclipse/che-java11-maven:next
-      memoryLimit: 512Mi
-      mountSources: true
+      image: quay.io/devfile/universal-developer-image:ubi8-latest
+      memoryLimit: 7Gi
+      cpuLimit: 3500m
       endpoints:
-        - name: http-maven
-          targetPort: 8080
-      volumeMounts:
-        - name: m2
-          path: /home/user/.m2
-      env:
-        - name: DEBUG_PORT
-          value: '5858'
-  - name: m2
-    volume: {}
-commands:
-  - id: mvn-package
-    exec:
-      component: tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: 'mvn -Dmaven.repo.local=/home/user/.m2/repository package'
-      group:
-        kind: build
-        isDefault: true
-  - id: run
-    exec:
-      component: tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: 'java -jar target/*.jar'
-      group:
-        kind: run
-        isDefault: true
-  - id: debug
-    exec:
-      component: tools
-      workingDir: ${PROJECT_SOURCE}
-      commandLine: 'java -Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=${DEBUG_PORT},suspend=n -jar target/*.jar'
-      group:
-        kind: debug
-        isDefault: true
+        - exposure: public
+          name: dev
+          secure: true
+          protocol: http
+          targetPort: 8000
+  - name: projects
+    volume:
+      size: 3Gi
