--- a/test.yaml
+++ b/test.yaml
@@ -8,6 +8,9 @@ metadata:
   projectType: 'maven'
   language: 'java'
   icon: https://raw.githubusercontent.com/devfile-samples/devfile-stack-icons/main/java-maven.jpg
+attributes:  
+  .che/che-editor.yaml: |  
+     id: che-incubator/che-code/insiders
 starterProjects:
   - name: springbootproject
     git:
