--- a/editor.new.yaml
+++ b/editor.new.yaml
@@ -11,7 +11,7 @@ events:
 components:
   - name: theia-ide
     container:
-      image: quay.io/vgulyy/che-theia:check-inlined-plugins
+      image: quay.io/eclipse/che-theia:7021b8b
       env:
         - name: THEIA_PLUGINS
           value: local-dir:///plugins
