--- a/editor.new.yaml
+++ b/editor.new.yaml
@@ -5,6 +5,7 @@ commands:
   - id: init-container-command
     apply:
       component: remote-runtime-injector
+      component: che-machine-exec
 events:
   preStart:
     - init-container-command
